don't activate drag on right mouse click. context entries in exercise mode are no longer truncated

--- a/src/haz3lweb/www/style/cursor-inspector.css
+++ b/src/haz3lweb/www/style/cursor-inspector.css
@@ -172,11 +172,6 @@
   color: var(--ci-status-error-text);
 }
 
-*:has(#cursor-inspector:hover) ~ .context-inspector,
-.context-inspector:hover,
-.context-inspector.visible {
-  display: flex;
-}
 
 #page > .context-inspector {
   position: absolute;
@@ -185,6 +180,7 @@
   min-width: 10em;
   max-height: 11.15em;
   overflow: auto;
+  display: flex;
   flex-direction: column;
   align-items: flex-end;
   white-space: nowrap;
